--- a/index.html
+++ b/index.html
@@ -66,18 +66,26 @@
       </section>
       <section class="content-section section__what">
         <h2 class="section__heading">Что снижает концентрацию внимания?</h2>
-        <article class="section__text-card">
-          <h3 class="section__title title-decor">Многозадачность</h3>
-          <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-        </article>
-        <article class="section__text-card">
-          <h3 class="section__title title-decor">Еда</h3>
-          <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-        </article>
-        <article class="section__text-card">
-          <h3 class="section__title title-decor">Гаджеты</h3>
-          <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
-        </article>
+        <ul class="section__what_cards-list">
+          <li>
+            <article class="section__text-card">
+              <h3 class="section__title title-decor">Многозадачность</h3>
+              <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+            </article>
+          </li>
+          <li>
+            <article class="section__text-card">
+              <h3 class="section__title title-decor">Еда</h3>
+              <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+            </article>
+          </li>
+          <li>
+            <article class="section__text-card">
+              <h3 class="section__title title-decor">Гаджеты</h3>
+              <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+            </article>
+          </li>
+        </ul>
       </section>
       <section class="content-section section__how">
         <h2 class="section__heading">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
